2025-11-19T00:58:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19485885173 # 813
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 412 586 / 414 588
* notice: next accum: outdated-unq outdated-all / unq all: 412 586 / 415 589
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-18]

2025-11-18T00:58:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19450070660 # 812
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-18
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 412 586 / 413 587
* notice: next accum: outdated-unq outdated-all / unq all: 412 586 / 414 588
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-17]

2025-11-17T00:59:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19415069436 # 811
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-17
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 411 585 / 413 587
* notice: next accum: outdated-unq outdated-all / unq all: 412 586 / 413 587
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-02] / []

2025-11-14T00:58:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19350741619 # 808