@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-19T00:58:18Z",
-  "count_outdated" : 586,
-  "uniques_outdated" : 412,
+  "timestamp" : "2025-11-23T01:06:18Z",
+  "count_outdated" : 587,
+  "uniques_outdated" : 413,
   "count" : 589,
   "uniques" : 415,
   "clones" : [
-    {
-      "timestamp": "2025-11-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-17T00:00:00Z",
       "count": 1,
