@@ -1,3 +1,12 @@
+2025-11-23T01:06:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19603745185 # 817
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-23
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 412 586 / 415 589
+* notice: next accum: outdated-unq outdated-all / unq all: 413 587 / 415 589
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-09] / []
+
 2025-11-19T00:58:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19485885173 # 813
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
